--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-items">
         <div class="header-lists">
-          <img class="header-img" src="./img/about/scoot-logo.svg" alt=" logo-photo">
+          <img class="header-img" src="./img/scoot-logo.svg" alt=" logo-photo">
           <nav class="header-navigate">
             <ul class="header-links">
               <li>
@@ -58,12 +58,12 @@
               </p>
             </div>
             <div class="features-img">
-              <img class="mobil-img" src="./img/about/phone.png" alt="photo">
+              <img class="mobil-img" src="./img/phone.png" alt="photo">
             </div>
           </div>
           <div class="features-content">
             <div class="features-photo">
-              <img class="better-img" src="./img/about/better-photo.png" alt="photo">
+              <img class="better-img" src="./img/better-photo.png" alt="photo">
             </div>
             <div class="features-about">
              <h2 class="features-heading"> Better urban living</h2>
@@ -83,7 +83,7 @@
             <ul class="value-items__list">
               <li class="value-items__value">
                 <div class="value-items__photo-phone">
-                  <img class="img" src="./img/about/value-phone.png" alt="phone-picture">
+                  <img class="img" src="./img/value-phone.png" alt="phone-picture">
                 </div>
                 <div class="value-items__content">
                   <h4 class="value-items__heading">Our tech
@@ -95,7 +95,7 @@
               </li>
               <li class="value-items__value">
                 <div class="value-items__photo-scooter">
-                  <img class="img" src="./img/about/value-scooter.png" alt="scooter-picture">
+                  <img class="img" src="./img/value-scooter.png" alt="scooter-picture">
                 </div>
                 <div class="value-items__content">
                   <h4 class="value-items__heading">
@@ -108,7 +108,7 @@
               </li>
               <li class="value-items__value">
                 <div class="value-items__photo-people">
-                  <img class="img" src="./img/about/value-people.png" alt="people-picture">
+                  <img class="img" src="./img/value-people.png" alt="people-picture">
                 </div>
                 <div class="value-items__content">
                   <h4 class="value-items__heading">
